--- a/MemoryGame_net7/MemoryGame_net7.csproj
+++ b/MemoryGame_net7/MemoryGame_net7.csproj
@@ -9,6 +9,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cellphone.png" />
+    <None Remove="Resources\clock.png" />
+    <None Remove="Resources\dog.png" />
+    <None Remove="Resources\fire.png" />
+    <None Remove="Resources\light_bulb.png" />
+    <None Remove="Resources\lion.png" />
+    <None Remove="Resources\puzzle.png" />
+    <None Remove="Resources\star.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\cellphone.png" />
+    <EmbeddedResource Include="Resources\clock.png" />
+    <EmbeddedResource Include="Resources\dog.png" />
+    <EmbeddedResource Include="Resources\fire.png" />
+    <EmbeddedResource Include="Resources\light_bulb.png" />
+    <EmbeddedResource Include="Resources\lion.png" />
+    <EmbeddedResource Include="Resources\puzzle.png" />
+    <EmbeddedResource Include="Resources\star.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
